--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"> <!-- Default is now "Hello UI" light theme -->
+<html lang="en" class="has-background-light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,33 +13,18 @@
     <link rel="icon" href="icons/icon-32x32.png" type="image/png">
 </head>
 <body>
-    <section class="section py-4 app-wrapper">
+    <section class="section py-4">
         <div class="container">
-            <nav class="navbar app-navbar mb-4" role="navigation" aria-label="main navigation">
+            <nav class="navbar is-primary mb-4" role="navigation" aria-label="main navigation">
                 <div class="navbar-brand">
-                    <a class="navbar-item" href="#" id="homeButton">
-                        <h1 class="title is-4 navbar-title">Body & Soul</h1>
-                    </a>
-                    <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarMenuContent">
-                        <span aria-hidden="true"></span>
-                        <span aria-hidden="true"></span>
-                        <span aria-hidden="true"></span>
-                        <span aria-hidden="true"></span>
+                    <a class="navbar-item" href="#">
+                        <h1 class="title is-4 has-text-white">Body & Soul</h1>
                     </a>
                 </div>
-                <div id="navbarMenuContent" class="navbar-menu">
-                    <div class="navbar-start">
-                        <!-- Add other main navigation items here if needed -->
-                    </div>
+                <div class="navbar-menu is-active"> <!-- Kept is-active for simplicity -->
                     <div class="navbar-end">
-                        <a class="navbar-item" id="menuCalendarBtn">
-                             Calendar <!-- CALENDAR ICON -->
-                        </a>
-                        <a class="navbar-item" id="menuSettingsBtn">
-                            ⚙ Settings <!-- GEAR ICON -->
-                        </a>
                         <div class="navbar-item">
-                            <div class="user-info-navbar has-text-right">
+                            <div class="has-text-white has-text-right">
                                 <p id="userNameDisplay" class="is-size-6"></p>
                                 <p class="is-size-7"><strong id="userPointsDisplay">0</strong> Points</p>
                             </div>
@@ -51,7 +36,7 @@
             <main id="appContent">
                 <!-- Screen: Welcome -->
                 <section id="welcomeScreen" class="content box">
-                     <h2 class="title is-3 screen-title">Welcome to Your Wellness Journey!</h2>
+                    <h2 class="title is-3 has-text-primary">Welcome to Your Wellness Journey!</h2>
                     <p>Embark on a 10-week challenge to transform your body and mind.</p>
                     <div class="buttons">
                         <button id="startChallengeBtn" class="button is-primary is-medium">Start the Challenge</button>
@@ -61,23 +46,11 @@
 
                 <!-- Screen: Registration -->
                 <section id="registrationScreen" class="content box is-hidden">
-                    <h2 class="title is-3 screen-title">Let's Get Started</h2>
+                    <h2 class="title is-3 has-text-primary">Let's Get Started</h2>
                     <form id="registrationForm">
                         <div class="field"><label class="label" for="name">Name:</label><div class="control"><input class="input" type="text" id="name" required></div></div>
                         <div class="field"><label class="label" for="age">Age:</label><div class="control"><input class="input" type="number" id="age" min="1" required></div></div>
-                        <div class="field">
-                            <label class="label" for="gender">Gender:</label>
-                            <div class="control">
-                                <div class="select is-fullwidth">
-                                    <select id="gender" required>
-                                        <option value="">Select...</option>
-                                        <option value="male">Male</option>
-                                        <option value="female">Female</option>
-                                        <option value="other">Other</option>
-                                    </select>
-                                </div>
-                            </div>
-                        </div>
+                        <div class="field"><label class="label" for="gender">Gender:</label><div class="control"><div class="select is-fullwidth"><select id="gender" required><option value="">Select...</option><option value="male">Male</option><option value="female">Female</option><option value="other">Other</option></select></div></div></div>
                         <div class="field"><label class="label" for="weight">Weight (kg):</label><div class="control"><input class="input" type="number" id="weight" step="0.1" min="1" required></div></div>
                         <div class="field"><label class="label" for="height">Height (cm):</label><div class="control"><input class="input" type="number" id="height" min="1" required></div></div>
                         <div class="field"><div class="control"><button type="submit" class="button is-primary is-fullwidth">Save & Next</button></div></div>
@@ -86,62 +59,34 @@
 
                 <!-- Screen: Baseline Questionnaire -->
                 <section id="baselineScreen" class="content box is-hidden">
-                    <h2 class="title is-3 screen-title">Baseline Assessment</h2>
+                    <h2 class="title is-3 has-text-primary">Baseline Assessment</h2>
                     <p>Let's record your starting point.</p>
                     <form id="baselineForm">
                         <div class="field"><label class="label" for="cardioCapacity">Cardio Capacity (e.g., minutes run/walk, distance):</label><div class="control"><input class="input" type="text" id="cardioCapacity" placeholder="e.g., 5 min run" required></div></div>
                         <div class="field"><label class="label" for="strengthReps">Strength Reps (e.g., push-ups, squats):</label><div class="control"><input class="input" type="text" id="strengthReps" placeholder="e.g., 10 push-ups" required></div></div>
-                        <div class="field">
-                            <label class="label" for="exerciseTrack">Choose Your Exercise Track:</label>
-                            <div class="control">
-                                <div class="select is-fullwidth">
-                                    <select id="exerciseTrack" required>
-                                        <option value="beginner">Beginner</option>
-                                        <option value="intermediate">Intermediate</option>
-                                        <option value="advanced">Advanced</option>
-                                    </select>
-                                </div>
-                            </div>
-                        </div>
+                        <div class="field"><label class="label" for="exerciseTrack">Choose Your Exercise Track:</label><div class="control"><div class="select is-fullwidth"><select id="exerciseTrack" required><option value="beginner">Beginner</option><option value="intermediate">Intermediate</option><option value="advanced">Advanced</option></select></div></div></div>
                         <div class="field"><div class="control"><button type="submit" class="button is-primary is-fullwidth">Start Week 1</button></div></div>
                     </form>
                 </section>
 
                 <!-- Screen: Main Dashboard -->
                 <section id="dashboardScreen" class="is-hidden">
-                    <div class="level"><div class="level-left"><div class="level-item"><h2 id="dashboardTitle" class="title is-3 screen-title">Daily Tasks - Week <span id="currentWeekDisplay">1</span></h2></div></div><div class="level-right"><div class="level-item"><div><p class="heading">Challenge Progress</p><progress id="challengeProgress" class="progress is-primary" value="0" max="100"></progress></div></div></div></div>
+                    <div class="level"><div class="level-left"><div class="level-item"><h2 id="dashboardTitle" class="title is-3">Daily Tasks - Week <span id="currentWeekDisplay">1</span></h2></div></div><div class="level-right"><div class="level-item"><div><p class="heading">Challenge Progress</p><progress id="challengeProgress" class="progress is-success" value="0" max="100"></progress></div></div></div></div>
                     <div id="dailyTasksContainer" class="columns is-multiline is-variable is-2"></div>
                     <div class="buttons is-centered mt-5"><button id="motivateMeBtn" class="button is-warning is-medium">Motivate Me Now!</button><button id="completeDayBtn" class="button is-primary is-medium">Mark Day as Complete</button></div>
                     <div id="dailyCompletionMessage" class="notification is-hidden mt-3"></div>
                 </section>
 
-                <!-- Screen: Settings -->
-                <section id="settingsScreen" class="content box is-hidden">
-                    <h2 class="title is-3 screen-title">Settings</h2>
-                    <div class="field">
-                        <label class="label" for="darkModeToggle">Dark Mode</label>
-                        <div class="control">
-                            <label class="switch-button">
-                                <input type="checkbox" id="darkModeToggle">
-                                <span class="slider round"></span>
-                            </label>
-                        </div>
-                        <p class="help">Toggle to switch between light and dark themes.</p>
-                    </div>
-                    <hr>
-                    <button id="backToDashboardBtn" class="button is-link">Back to Main Screen</button>
-                </section>
-
-                <!-- Modals (No change to their internal structure) -->
+                <!-- Modals -->
                 <div id="motivateModal" class="modal"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Need a Boost?</p><button class="delete" aria-label="close" data-target-modal="motivateModal"></button></header><section class="modal-card-body"><p>Which area are you feeling unmotivated about?</p><div class="field"><div class="control"><div class="select is-fullwidth"><select id="motivationAreaSelect"><option value="sleep">Sleep</option><option value="weightControl">Weight Control</option><option value="exercise">Exercise</option><option value="peaceOfMind">Peace of Mind</option><option value="makeMeQuit">Make Me Quit</option></select></div></div></div><div id="motivationMessage" class="content mt-3 p-2 has-background-light" style="min-height: 50px;"></div></section><footer class="modal-card-foot is-justify-content-flex-end"><button id="getMotivationBtn" class="button is-primary">Get Motivation</button><button class="button closeModalBtn" data-target-modal="motivateModal">Cancel</button></footer></div></div>
                 <div id="llmChatModal" class="modal"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Talk About Stress Triggers</p><button class="delete" aria-label="close" data-target-modal="llmChatModal"></button></header><section class="modal-card-body"><p>Describe what's on your mind. (This is a simulated chat)</p><div class="field"><div class="control"><textarea id="llmChatInput" class="textarea" rows="4" placeholder="Type here..."></textarea></div></div><div id="llmChatResponse" class="content mt-3 p-2 has-background-light" style="min-height: 100px; max-height: 200px; overflow-y: auto;"></div></section><footer class="modal-card-foot is-justify-content-flex-end"><button id="sendToLlmBtn" class="button is-primary">Send</button><button class="button closeModalBtn" data-target-modal="llmChatModal">Close</button></footer></div></div>
                 <div id="educationModal" class="modal"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p id="educationTitle" class="modal-card-title">Education</p><button class="delete" aria-label="close" data-target-modal="educationModal"></button></header><section class="modal-card-body content"><p id="educationText"></p></section><footer class="modal-card-foot is-justify-content-flex-end"><button class="button closeModalBtn" data-target-modal="educationModal">Close</button></footer></div></div>
-                <div id="calendarModal" class="modal"><div class="modal-background"></div><div class="modal-card" style="width: 90%; max-width: 600px;"><header class="modal-card-head"><p class="modal-card-title" id="calendarModalTitle">Monthly Progress</p><button class="delete" aria-label="close" data-target-modal="calendarModal"></button></header><section class="modal-card-body"><div class="level is-mobile"><div class="level-left"><button id="prevMonthBtn" class="button is-small">< Prev</button></div><div class="level-item has-text-centered"><p id="calendarMonthYear" class="title is-5"></p></div><div class="level-right"><button id="nextMonthBtn" class="button is-small">Next ></button></div></div><div class="calendar-grid mt-3"><div class="calendar-header">Sun</div><div class="calendar-header">Mon</div><div class="calendar-header">Tue</div><div class="calendar-header">Wed</div><div class="calendar-header">Thu</div><div class="calendar-header">Fri</div><div class="calendar-header">Sat</div></div></section><footer class="modal-card-foot is-justify-content-flex-end"><button class="button closeModalBtn" data-target-modal="calendarModal">Close</button></footer></div></div>
+                <!-- NO CALENDAR MODAL IN THIS VERSION -->
             </main>
         </div>
     </section>
 
-    <!-- FAB REMOVED -->
+    <!-- NO FAB IN THIS VERSION -->
 
     <div id="inAppNotification" class="notification is-hidden is-fixed-bottom-custom p-3 m-3">
         <button id="dismissNotificationBtn" class="delete"></button>
